--- a/style.css
+++ b/style.css
@@ -128,7 +128,8 @@ section.aboutMe {
 }
 
 section.aboutMe h1 {
-  border: 2px solid black;
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
   width: 40%;
   margin-left: 27%;
   font-family: 'Montserrat', sans-serif;
@@ -176,9 +177,10 @@ section.skills {
 }
 
 section.skills h1 {
-  border: 2px solid black;
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
   width: 20%;
-  margin-left: 28%;
+  margin-left: 29%;
   padding-left: 12%;
   padding-right: 10%;
   font-family: 'Montserrat', sans-serif;
@@ -217,9 +219,10 @@ section.projects .projects-background {
 
 section.projects h1 {
   color: white;
-  border: 2px solid white;
+  border-top: 2px solid white;
+  border-bottom: 2px solid white;
   width: 100px;
-  margin-left: 35%;
+  margin-left: 29%;
   padding-left: 40px;
   padding-right: 6px;
   position: relative;
@@ -265,7 +268,8 @@ section.projects .project-links img {
 }
 
 section.contacts h1 {
-  border: 2px solid black;
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
   width: 20%;
   margin-left: 28%;
   padding-left: 5%;
@@ -306,7 +310,7 @@ footer {
   margin-top: 20%;
   background-color: black;
   color: #e0e0e0;
-  height: 34vh;
+  height: 250px;
   font-family: 'Montserrat', sans-serif;
   text-align: center;
 }
@@ -314,7 +318,6 @@ footer {
 footer .back-to-top i {
   position: absolute;
   left: 48%;
-  bottom: -775vh;
 }
 
 footer .back-to-top a {
@@ -335,6 +338,6 @@ footer .social-media {
 
 footer .copy-rights {
   position: relative;
-  top: 29%;
+  top: 39%;
 }
 /*# sourceMappingURL=style.css.map */
