--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,4 @@
+
 body{
     margin:0;
     padding:0;
@@ -17,53 +18,71 @@ a{
 header{
     background-color:black;
     height:50px;
+    color:rgb(218, 218, 218);
+    .logo{
+        width:6%;
+        position:absolute;
+        top:2%;
+    }
+    ul{
+        display:none;
+    }
     i{
-      color:white;
-      font-size:2rem;
+      font-size:2.5rem;
       float:right;
       margin-right:5%;
     }
 }
 section.billboard{
-    background:url("assets/mobile_Background.png");
+    background:url('assets/desktopBackground.jpg');
     background-size:100% 100%;
     background-repeat:no-repeat;
     height:100vh;
     position:relative;
     bottom:20px;
-    p{
-        font-family: 'Advent Pro', sans-serif;
-        color: rgba(255, 255, 255, 1);
-        text-align:center;
-        padding-top:50%;
-        padding-right:10;
-        padding-left:3%;
-        font-size:1.2rem;
-    }
-    .developer{
-        position:relative;
-        bottom:2%;
-        font-weight:bold;
-        text-align:center;
-        font-size:1.7rem;
-        font-weight:5em;
-        color: rgba(255, 255, 255, 1);
-        font-family: 'Montserrat', sans-serif;
-    }
-    .divider{
-        text-align:center;    
-    }
-    .contacts{
-        text-align:center;
-        margin-top:10%;
-        img{
-            width:5%;
+    color:rgb(250, 250, 250);
+    
+    .billboard-content{
+
+        p{
+            font-family: 'Advent Pro', sans-serif;
+            text-align:center;
+            padding-top:50%;
+            padding-right:10;
+            padding-left:3%;
+            font-size:1.2rem;
         }
+        .developer{
+            position:relative;
+            bottom:2%;
+            font-weight:bold;
+            text-align:center;
+            font-size:1.7rem;
+            font-weight:5em;
+            font-family: 'Montserrat', sans-serif;
+        }
+        .divider{
+            text-align:center;    
+        }
+        .contacts{
+            text-align:center;
+            margin-top:10%;
+            img{
+                width:7.5%;
+                margin-right:5%;
+                position:relative;
+                left:2.5%;
+            }
+        }
+    }
+    .billboard-content-desktop{
+        display:none;
     }
     
 }
 
 section.cosmetic{
+    color:rgb(218, 218, 218);
    .it_berries_container{
        text-align:center;
        .itLogo{
@@ -74,16 +93,15 @@ section.cosmetic{
     }
    }
    .creativity{
-    background-color:black;
-    
+    background-color:black; 
     position:relative;
     bottom:10vh;
-    color:white;
     font-family: 'Open Sans', sans-serif;
     h3{
         text-align:center;
         padding-top:10%;
         font-size:2rem;
+        padding-right:1%;
     }
     p{
         padding: 0 8% 0 8%;
@@ -92,7 +110,10 @@ section.cosmetic{
             display:none;
         }
     }
-    .button{
+    .ITB-logo{
+        display:none;
+    }
+    .button-container{
         text-align:center;
         padding-bottom:10%;
         button{
@@ -135,7 +156,7 @@ section.aboutMe{
     margin-bottom:20%;
     img{
         
-        width:60%;
+        width:300px;
     }    
 }
 
@@ -158,37 +179,239 @@ section.brief{
     
 }
 
+
 section.skills{
     font-family: 'Open Sans', sans-serif;
     margin-top:20%;
-    h1{
-        border-top:2px solid black;
-        border-bottom:2px solid black;
-        width:20%;
-        margin-left:29%;
-        padding-left:12%;
-        padding-right:10%;
-        font-family: 'Montserrat', sans-serif; 
-    }
-    h2{
-        font-size:2rem;
-        border:none;
-        font-size:2.8rem;
-        font-family: 'Montserrat', sans-serif;
-        text-align:center;
-        margin-top:20%;
-    }
-    .tech{
-        margin-left:37%;
-        img{
-            display:block;
-            margin-bottom:10%;
+    text-align:center;
+
+    .skills-mobile{
+        h1{
+            border-top:2px solid black;
+            border-bottom:2px solid black;
+            width:20%;
+            margin-left:27%;
+            padding-left:12%;
+            padding-right:10%;
+            font-family: 'Montserrat', sans-serif; 
         }
-        .tech-text{
-            margin-left:10%;
+        h2{
+            font-size:2rem;
+            border:none;
+            font-size:2.8rem;
+            font-family: 'Montserrat', sans-serif;
+            text-align:center;
+            margin-top:20%;
+        }
+        .tech{
+            
+            img{
+                display:block;
+                margin-bottom:10%;
+                margin-left:37%;
+            }
+            .tech-text{
+                margin-right:3%;
+            }
         }
     }
 }
+.skills-desktop{
+    display:none;
+}
+
+
+//large screen tablet
+@media (min-width:1024px){
+    header{
+        .logo{
+            position:absolute;
+            top:1.6%;
+            width:4%;
+        }
+        i{
+            display:none;
+        }
+
+        ul{
+            position:absolute;
+            display:flex;
+            right:5%;
+            width:40%;
+            font-size:.9rem;
+            font-family: 'Montserrat', sans-serif;
+            li{
+               margin-right:11%;
+               padding:2%; 
+                a{
+                  color:white;
+                }
+                &:last-child{
+                    background-color:white;
+                    border-radius:25px;
+                    height:10px;
+                    padding-right:4%;
+                    padding-left:4%;
+                    padding-bottom:1.5vw;
+                    a{
+                     color:black;
+                    }
+                }
+            }
+        }
+    }
+
+    section.billboard{
+       
+        .billboard-content{
+            display:none;
+        }
+        .billboard-content-desktop{
+            display:block;
+            text-align:center;
+            font-size:1em;
+            position:relative;
+            top:20%;
+            color:rgb(241, 241, 241);
+            font-family: 'Advent Pro', sans-serif;
+            .developer{
+                font-family: 'Montserrat', sans-serif;
+            }
+            .divider{
+                img{
+                    position:relative;
+                    right:1.3%;
+                }
+            }
+            .contacts{
+                img{
+                    margin-right:2%;
+                }
+            }
+        }
+    }
+
+    section.cosmetic{
+        .creativity{
+            font-size:.9rem;
+            padding-bottom:10%;
+            background: linear-gradient(90.18deg, #1D1D1D 31.74%, #1D1D1D 90.49%, #1D1D1D 90.49%);
+            h3{
+                padding:0;
+                float:left;
+                margin-left:8%;
+            }
+            p{
+                text-align:none;
+                padding:11% 30% 2% 8%;
+            }
+            .ITB-logo{
+                display:inline;
+                position:absolute;
+                width:20%;
+                right:1%;
+            }
+            .button-container{
+                float:left;
+                margin-left:8%;
+                button{
+                  padding:35%;
+                }
+            }
+        }
+    }
+    section.aboutMe{
+        font-size:.9rem;
+        margin:0;
+        h1{
+            width:20%;
+            position:relative;
+            left:10%;
+        }
+        p{
+          margin-top:-9.9%;
+          margin-bottom:-8%;
+        }
+    }
+
+    .divider-container{
+        padding-bottom:10%;
+        padding-right:6%;
+    }
+    .second-divider{
+        padding-top:12%;
+        padding-right:7.5%;
+    }
+
+    section.brief{
+        margin-top:-20%;
+        margin-bottom:-30%;
+        font-size:.9rem;
+        display:grid;
+        padding-left:4%;
+        grid-template-columns:48% 48%;
+        div{
+            &:last-child{
+                position:relative;
+                left:55%
+            }
+        }
+    }
+    section.skills{
+        display:none;
+    }
+    section.skills-desktop{
+        display:block;
+        font-size:.9rem;
+        margin-top:-10%;
+        h1{
+            border-top:2px solid black;
+            border-bottom:2px solid black;
+            width:13%;
+            margin-left:39%;
+            padding-left:7%;
+            font-family: 'Montserrat', sans-serif; 
+        }
+        h2,.tech{
+            font-family: 'Montserrat', sans-serif;
+            margin-left:20%;
+        }
+        .tech{
+            display:grid;
+            grid-template-columns:20% 20% 20% 20%;
+            div{
+                margin-top:7vh;
+                
+                &:last-child{
+                    img{
+                        width:80%;
+                        position:relative;
+                        bottom:2.3vw;
+                        right:16%;
+                    }
+                }
+            }
+        }
+    }
+
+    section-projects{
+        nav{
+            ul{
+                display:flex;
+                grid-template-columns:48%;
+            }
+        }
+    }
+    footer{
+        .back-to-top{
+            i{
+                padding-right:3.4vw;
+            }
+        }
+    }
+
+}
+
 
 section.projects{
     .projects-background{
@@ -197,7 +420,7 @@ section.projects{
         background-image:url('assets/projectsBack.jpg');
         background-size:100% 100%;
         background-repeat:no-repeat;
-        height:20vh;
+        height:30vw;
     }
     h1{
         color:white;
@@ -205,8 +428,8 @@ section.projects{
         border-bottom:2px solid white;
         width:100px;
         margin-left:29%;
-        padding-left:40px;
-        padding-right:6px;
+        padding-left:15%;
+        padding-right:3%;
         position:relative;
         top:30%;
         
@@ -218,7 +441,7 @@ section.projects{
         background-color:rgb(39, 38, 38);
         position:relative;
         bottom:5.2vh;
-        font-size:2rem;
+        font-size:1.8rem;
         ul{
             position:relative;
             right:0%;
@@ -246,6 +469,7 @@ section.projects{
         }
     }
 }
+
 
 section.contacts{
     h1{
@@ -284,6 +508,8 @@ section.contacts{
     }
 }
 
+
+
 footer{
     margin-top:20%;
     background-color:black;
@@ -296,7 +522,7 @@ footer{
         i{
             position:relative;
             top:3.5vh;
-            left:16%; 
+            left:12.4%; 
             animation-name:top;
             animation-duration:0.9s;
             animation-iteration-count:infinite;
@@ -312,6 +538,7 @@ footer{
         a{
             position:relative;
             top:8vh;
+            right:3.4%;
         }
     }
     .social-media{
@@ -324,6 +551,122 @@ footer{
     .copy-rights{
         position:relative;
         top:39%;
+        font-size:.7rem;
     }
 }
+
+
+//table**********
+@media(min-width:700px){
+    body{
+        font-size:1.8rem;
+    }
+    header{
+        height:80px;
+        i{
+            margin-top:1%;
+            font-size:3.3rem;
+        }
+    }
+    section.billboard{
+        bottom:29px;
+        .billboard-content{
+            position:relative;
+            bottom:20vw;
+            p{
+                font-size:1.4rem;
+                padding-bottom:2%;
+                padding-right:2%;
+            }
+        }
+    }
+   
+    section.cosmetic{
+        .creativity{
+            h3{
+                padding-right:3%;
+            }
+        }
+    }
+
+    section.aboutMe{
+        margin-top:0;
+        h1{
+            margin-bottom:15%;
+        }
+    }
+    section.skills{
+        .tech{
+            img{
+                margin-left:34%;
+                width:30%;
+                &:last-child{
+                   margin:0;
+                   margin-left:35%;
+                   width:0%;
+                }
+            }
+        }
+    }
+    section.projects{
+        h1{
+            padding-right:20%;
+            right:2.5%;
+        }
+        nav{
+            ul{
+              li{
+                  a{
+                    position:relative;
+                    left:16%;
+                  }
+                  &:last-child{
+                      margin-left:16%;
+                  }
+                }
+            }
+        }
+    }
+
+    section.contacts{
+        h1{
+            padding-left:8.5%;
+        }
+        form{
+            input{
+                width:60%;
+            }
+            textarea{
+                width:70%;
+            }
+        }
+    }
+
+    footer{
+        height:370px;
+        .back-to-top{
+            padding-right:5%;
+            i{
+                font-size:2.5rem;
+            }
+       }
+       ul{
+        li{
+            margin-top:3%;
+            a{
+                img{
+                    width:150%;
+                }
+            }
+        }
+       }
+       .copy-rights{
+           font-size:1.4rem;
+       }   
+    }
+
+}
+
+
+
 
